Seller Analytics Frontend
